implemented update operations for franchise. Also added dockerization for app
