# docs/swagger.json
@@ -177,7 +177,7 @@
                 "parameters": [
                     {
                         "description": "body",
-                        "name": "companyInfo",
+                        "name": "franchiseInfo",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -248,6 +248,69 @@
                     "Franchise"
                 ],
                 "summary": "Get franchise by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id of the franchise",
+                        "name": "franchise_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Franchise"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a given franchise's main data and location data. This will not update its website data.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Franchise"
+                ],
+                "summary": "Update franchise data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id of the franchise",
+                        "name": "franchise_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "body",
+                        "name": "franchiseInfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateFranchiseDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Franchise"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "Given a franchise id, runs its website data analysis again to update automatically",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Franchise"
+                ],
+                "summary": "Update franchise website data automatically",
                 "parameters": [
                     {
                         "type": "string",
@@ -378,6 +441,23 @@
                 }
             }
         },
+        "dto.UpdateFranchiseDTO": {
+            "type": "object",
+            "properties": {
+                "company_id": {
+                    "type": "integer"
+                },
+                "location": {
+                    "$ref": "#/definitions/dto.LocationDTO"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "models.City": {
             "type": "object",
             "properties": {
@@ -427,7 +507,7 @@
         "models.Franchise": {
             "type": "object",
             "properties": {
-                "companyId": {
+                "company_id": {
                     "type": "integer"
                 },
                 "id": {
@@ -436,7 +516,7 @@
                 "location": {
                     "$ref": "#/definitions/models.Location"
                 },
-                "locationId": {
+                "location_id": {
                     "type": "integer"
                 },
                 "name": {
@@ -445,11 +525,11 @@
                 "url": {
                     "type": "string"
                 },
-                "websideDataId": {
-                    "type": "integer"
-                },
-                "websiteData": {
+                "website_data": {
                     "$ref": "#/definitions/models.FranchiseWebSite"
+                },
+                "website_data_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -473,10 +553,16 @@
         "models.FranchiseWebSite": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "created_at": {
                     "type": "string"
                 },
                 "domain_contact_email": {
+                    "type": "string"
+                },
+                "domain_created_at": {
+                    "type": "string"
+                },
+                "domain_expires_at": {
                     "type": "string"
                 },
                 "endpoints": {
@@ -503,13 +589,7 @@
                 "registered_to": {
                     "type": "string"
                 },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "web_created_at": {
-                    "type": "string"
-                },
-                "web_expires_at": {
+                "updated_at": {
                     "type": "string"
                 }
             }
